kube-config/purple_dz/pod_image_dz.yml
apiVersion: v1
kind: Pod
metadata:
  name: image-app
  labels:
    components: web_image
spec:
  containers:
  - name: image-app
    image: antonlarichev/conv-app:1.2
    resources:
      limits:
        memory: "512Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
