kube-config/purple_dz/app-image-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-app-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    components: web_image
