kube-config/purple_dz/node_port_image.yml
apiVersion: v1
kind: Service
metadata: 
  name: image-app-port
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 31200
  selector:
    components: web_image
