kube-config/purple_dz/ingress_image.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: myingress
  annotations: 
    nginx.ingress.kubernetes.io/add-base-url: "true"
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: kubetest.entropyapitrackingtest.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service:
            name: image-app-clusterip
            port:
              number: 80
